feat: finalizados testes e correções menores no sistema
