# app/Http/Requests/OrderShowRequest.php
@@ -8,6 +8,7 @@ use Illuminate\Foundation\Http\FormRequest;
 use Illuminate\Http\Exceptions\HttpResponseException;
 use Illuminate\Validation\Rule;
 use Symfony\Component\HttpFoundation\Response;
+use App\Enums\OrderStatus;
 
 class OrderShowRequest extends FormRequest
 {
@@ -28,33 +29,8 @@ class OrderShowRequest extends FormRequest
     {
         return [
             'status' => [
-                'nullable', Rule::enum(OrderStatus::class)
+                Rule::enum(OrderStatus::class)
             ],
         ];
     }
-
-    /**
-    * Prepare the data for validation.
-    *
-    * @return void
-    */
-    protected function prepareForValidation()
-    {
-        $this->merge([
-            'status' => $this->query('status'),
-        ]);
-    }
-
-    /**
-     * Return validation errors as json response
-     *
-     * @param Validator $validator
-     */
-    protected function failedValidation(Validator $validator)
-    {
-        $response = ['errors' => $validator->errors()];
-
-        throw new HttpResponseException(response()->json($response, Response::HTTP_UNPROCESSABLE_ENTITY));
-    }
-
 }
